feat: add html basic structure

--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
   </head>
   <body>
     <h1>Clicker Game</h1>
+
+    <!-- a clickable elememt - e.g. button/image-->
+    <img src="" alt="" />
+
+    <!-- Game info -->
+    <p>Total cookie count: 0</p>
+    <p>Cookies per second (cps): 0</p>
+
+    <!-- container for shop upgrades -->
+    <section id="shop-container"></section>
   </body>
 </html>
