feat: icon and initial styling added to css

--- a/index.html
+++ b/index.html
@@ -8,16 +8,23 @@
     <script src="app.js" defer></script>
   </head>
   <body>
-    <h1>Clicker Game</h1>
+    <header>
+      <h1>Clicker Game</h1>
+    </header>
 
     <!-- a clickable elememt - e.g. button/image-->
-    <img src="" alt="" />
+    <img src="./media/flower.gif" alt="clickable flower icon" />
 
     <!-- Game info -->
-    <p>Total cookie count: 0</p>
-    <p>Cookies per second (cps): 0</p>
+    <section id="game-info">
+      <h2>Flower Counter</h2>
+      <p>Total flower count: 0</p>
+      <p>Flowers per second (cps): 0</p>
+    </section>
 
     <!-- container for shop upgrades -->
-    <section id="shop-container"></section>
+    <section id="shop-container">
+      <h2>Shop Upgrades</h2>
+    </section>
   </body>
 </html>
