feat: purchase buttons and not enough credits logic added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <!-- container for shop upgrades -->
     <section id="shop-container">
       <h2>Shop Upgrades</h2>
+      <p id="purchase-feedback"></p>
+      <!-- <button id="purchase-button">Purchase</button> -->
     </section>
   </body>
 </html>
