style: added some css to arrange elements

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Clicker Game</h1>
+      <h1>🌼FLOWER GARDEN 3000🌼</h1>
     </header>
 
     <!-- a clickable elememt - e.g. button/image-->
@@ -24,14 +24,16 @@
 
     <!-- Game info -->
     <section id="game-info">
-      <h2>Flower Counter</h2>
+      <!-- <h2>Flower Counter</h2> -->
       <p id="flower-counter">Total flower count: 0</p>
       <p id="fps-counter">Flowers per second (cps): 0</p>
+      <button id="pause-button">Pause</button>
     </section>
 
     <!-- container for shop upgrades -->
     <section id="shop-container">
-      <h2>Shop Upgrades</h2>
+      <h2>The Garden Centre</h2>
+      <div id="shop-upgrades"></div>
       <p id="purchase-feedback"></p>
       <!-- <button id="purchase-button">Purchase</button> -->
     </section>
